@@ -18,6 +18,24 @@
 
 load_lib sycl.exp
 
+# Wait for breakpoint-hit event and return id of the stopped thread.
+proc expect_breakpoint_hit {line test} {
+    global mi_gdb_prompt
+
+    gdb_expect {
+	-re "\\*stopped,reason=\"breakpoint-hit\".*line=\"$line\".*thread-id=\"(\[0-9\]+)\".*\r\n$mi_gdb_prompt" {
+	    pass "$test"
+	    return $expect_out(1,string)
+	}
+	-re ".*$mi_gdb_prompt" {
+	    fail "$test"
+	}
+	timeout {
+	    fail "$test"
+	}
+    }
+}
+
 standard_testfile simd.cpp
 
 if {[skip_sycl_tests]} {
@@ -43,10 +61,12 @@ if {[mi_start_sycl_program] < 0} {
 set kernel_dim0_line [gdb_get_line_number "kernel-dim0-defined"]
 set odd_branch_line [gdb_get_line_number "kernel-odd-branch"]
 
-mi_continue_to_line $kernel_dim0_line "Continue to 'kernel_dim0_line' and stop at breakpoint"
+# Set temporary breakpoint to line $kernel_dim0_line and continue.
+mi_tbreak $kernel_dim0_line
+mi_send_resuming_command "exec-continue" "run to $kernel_dim0_line (exec-continue)"
 
-set stopped_threads [mi_stopped_thread_ids $srcfile $kernel_dim0_line]
-set first_thread_id [lindex $stopped_threads 0]
+# Expect breakpoint-hit stop event and get the id of the stopped thread.
+set thread_id [expect_breakpoint_hit $kernel_dim0_line "expect breakpoint-hit event at line $kernel_dim0_line"]
 
 # First get _simd_width convenience variable value to compare correctness of
 # the MI command output.
@@ -62,20 +82,25 @@ set mask 0xffffffff
 set emask_int [expr $mask & int(pow(2, $simd_width) - 1)]
 set emask_hex [format 0x%x $emask_int]
 
-mi_gdb_test "-thread-info $first_thread_id" \
-    "\\^done,threads=\\\[\{id=\".*\",target-id=.*,execution-mask=\"$emask_hex\",simd-width=\"$simd_width\",thread-group=\"i$decimal\",state=\"stopped\"\}\\\]" \
-    "Check execution mask and simd width for thread $first_thread_id at line $kernel_dim0_line"
+mi_gdb_test "-thread-info $thread_id" \
+    "\\^done,threads=\\\[\{id=\".*\",target-id=.*,execution-mask=\"$emask_hex\",simd-width=\"$simd_width\",hit-lanes-mask=\"$hex\",thread-group=\"i$decimal\",state=\"stopped\"\}\\\]" \
+    "Check execution mask and simd width for thread $thread_id at line $kernel_dim0_line"
 
-mi_continue_to_line $odd_branch_line "Continue to 'odd_branch_line' and stop at breakpoint"
+# Set temporary breakpoint to line $odd_branch_line and continue.
+mi_tbreak $odd_branch_line
+mi_send_resuming_command "exec-continue" "run to $odd_branch_line (exec-continue)"
+
+# Expect breakpoint-hit stop event and get the id of the stopped thread.
+set thread_id [expect_breakpoint_hit $odd_branch_line "expect breakpoint-hit event at line $odd_branch_line"]
 
 # Calculate the expected emask.
 set mask 0xaaaaaaaa
 set emask_int [expr $mask & int(pow(2, $simd_width) - 1)]
 set emask_hex [format 0x%x $emask_int]
 
-mi_gdb_test "-thread-info $first_thread_id" \
-    "\\^done,threads=\\\[\{id=\".*\",target-id=.*,execution-mask=\"$emask_hex\",simd-width=\"$simd_width\",thread-group=\"i$decimal\",state=\"stopped\"\}\\\]" \
-    "Check execution mask and simd width for thread $first_thread_id at line $odd_branch_line"
+mi_gdb_test "-thread-info $thread_id" \
+    "\\^done,threads=\\\[\{id=\".*\",target-id=.*,execution-mask=\"$emask_hex\",simd-width=\"$simd_width\",hit-lanes-mask=\"$hex\",thread-group=\"i$decimal\",state=\"stopped\"\}\\\]" \
+    "Check execution mask and simd width for thread $thread_id at line $odd_branch_line"
 
 # Test a host thread that it does not contain emask or simd width fields.
 send_gdb "-thread-info 1\n"
